--- a/Capstone-Project1/Data_Story/Statistical Analysis.ipynb
+++ b/Capstone-Project1/Data_Story/Statistical Analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "4          5.175    1.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "139          5.922    2.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,6 +432,487 @@
     "seeds2 = seeds[seeds[\"class\"]==2]\n",
     "seeds3 = seeds[seeds[\"class\"]==3]\n",
     "seeds2.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area</th>\n",
+       "      <th>perimeter</th>\n",
+       "      <th>compactness</th>\n",
+       "      <th>length</th>\n",
+       "      <th>width</th>\n",
+       "      <th>asymmetry_coefficient</th>\n",
+       "      <th>groove_length</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>14.334429</td>\n",
+       "      <td>14.294286</td>\n",
+       "      <td>0.880070</td>\n",
+       "      <td>5.508057</td>\n",
+       "      <td>3.244629</td>\n",
+       "      <td>2.667403</td>\n",
+       "      <td>5.087214</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.215704</td>\n",
+       "      <td>0.576583</td>\n",
+       "      <td>0.016191</td>\n",
+       "      <td>0.231508</td>\n",
+       "      <td>0.177616</td>\n",
+       "      <td>1.173901</td>\n",
+       "      <td>0.263699</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>11.230000</td>\n",
+       "      <td>12.630000</td>\n",
+       "      <td>0.839200</td>\n",
+       "      <td>4.902000</td>\n",
+       "      <td>2.850000</td>\n",
+       "      <td>0.765100</td>\n",
+       "      <td>4.519000</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>13.750000</td>\n",
+       "      <td>13.960000</td>\n",
+       "      <td>0.868850</td>\n",
+       "      <td>5.384500</td>\n",
+       "      <td>3.134250</td>\n",
+       "      <td>1.826500</td>\n",
+       "      <td>4.924500</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>14.355000</td>\n",
+       "      <td>14.320000</td>\n",
+       "      <td>0.880500</td>\n",
+       "      <td>5.534000</td>\n",
+       "      <td>3.243500</td>\n",
+       "      <td>2.545500</td>\n",
+       "      <td>5.094000</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>15.045000</td>\n",
+       "      <td>14.732500</td>\n",
+       "      <td>0.890400</td>\n",
+       "      <td>5.677000</td>\n",
+       "      <td>3.378500</td>\n",
+       "      <td>3.301000</td>\n",
+       "      <td>5.223500</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>17.080000</td>\n",
+       "      <td>15.460000</td>\n",
+       "      <td>0.918300</td>\n",
+       "      <td>6.053000</td>\n",
+       "      <td>3.683000</td>\n",
+       "      <td>6.685000</td>\n",
+       "      <td>5.877000</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            area  perimeter  compactness     length      width  \\\n",
+       "count  70.000000  70.000000    70.000000  70.000000  70.000000   \n",
+       "mean   14.334429  14.294286     0.880070   5.508057   3.244629   \n",
+       "std     1.215704   0.576583     0.016191   0.231508   0.177616   \n",
+       "min    11.230000  12.630000     0.839200   4.902000   2.850000   \n",
+       "25%    13.750000  13.960000     0.868850   5.384500   3.134250   \n",
+       "50%    14.355000  14.320000     0.880500   5.534000   3.243500   \n",
+       "75%    15.045000  14.732500     0.890400   5.677000   3.378500   \n",
+       "max    17.080000  15.460000     0.918300   6.053000   3.683000   \n",
+       "\n",
+       "       asymmetry_coefficient  groove_length  class  \n",
+       "count              70.000000      70.000000   70.0  \n",
+       "mean                2.667403       5.087214    1.0  \n",
+       "std                 1.173901       0.263699    0.0  \n",
+       "min                 0.765100       4.519000    1.0  \n",
+       "25%                 1.826500       4.924500    1.0  \n",
+       "50%                 2.545500       5.094000    1.0  \n",
+       "75%                 3.301000       5.223500    1.0  \n",
+       "max                 6.685000       5.877000    1.0  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Show the summary stats for each individual class\n",
+    "seeds1.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area</th>\n",
+       "      <th>perimeter</th>\n",
+       "      <th>compactness</th>\n",
+       "      <th>length</th>\n",
+       "      <th>width</th>\n",
+       "      <th>asymmetry_coefficient</th>\n",
+       "      <th>groove_length</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>18.334286</td>\n",
+       "      <td>16.135714</td>\n",
+       "      <td>0.883517</td>\n",
+       "      <td>6.148029</td>\n",
+       "      <td>3.677414</td>\n",
+       "      <td>3.644800</td>\n",
+       "      <td>6.020600</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.439496</td>\n",
+       "      <td>0.616995</td>\n",
+       "      <td>0.015500</td>\n",
+       "      <td>0.268191</td>\n",
+       "      <td>0.185539</td>\n",
+       "      <td>1.181868</td>\n",
+       "      <td>0.253934</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>15.380000</td>\n",
+       "      <td>14.660000</td>\n",
+       "      <td>0.845200</td>\n",
+       "      <td>5.363000</td>\n",
+       "      <td>3.231000</td>\n",
+       "      <td>1.472000</td>\n",
+       "      <td>5.144000</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>17.330000</td>\n",
+       "      <td>15.737500</td>\n",
+       "      <td>0.872525</td>\n",
+       "      <td>5.979250</td>\n",
+       "      <td>3.554250</td>\n",
+       "      <td>2.845500</td>\n",
+       "      <td>5.877500</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>18.720000</td>\n",
+       "      <td>16.210000</td>\n",
+       "      <td>0.882600</td>\n",
+       "      <td>6.148500</td>\n",
+       "      <td>3.693500</td>\n",
+       "      <td>3.609500</td>\n",
+       "      <td>5.981500</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>19.137500</td>\n",
+       "      <td>16.557500</td>\n",
+       "      <td>0.898225</td>\n",
+       "      <td>6.312000</td>\n",
+       "      <td>3.804750</td>\n",
+       "      <td>4.436000</td>\n",
+       "      <td>6.187750</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>21.180000</td>\n",
+       "      <td>17.250000</td>\n",
+       "      <td>0.910800</td>\n",
+       "      <td>6.675000</td>\n",
+       "      <td>4.033000</td>\n",
+       "      <td>6.682000</td>\n",
+       "      <td>6.550000</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            area  perimeter  compactness     length      width  \\\n",
+       "count  70.000000  70.000000    70.000000  70.000000  70.000000   \n",
+       "mean   18.334286  16.135714     0.883517   6.148029   3.677414   \n",
+       "std     1.439496   0.616995     0.015500   0.268191   0.185539   \n",
+       "min    15.380000  14.660000     0.845200   5.363000   3.231000   \n",
+       "25%    17.330000  15.737500     0.872525   5.979250   3.554250   \n",
+       "50%    18.720000  16.210000     0.882600   6.148500   3.693500   \n",
+       "75%    19.137500  16.557500     0.898225   6.312000   3.804750   \n",
+       "max    21.180000  17.250000     0.910800   6.675000   4.033000   \n",
+       "\n",
+       "       asymmetry_coefficient  groove_length  class  \n",
+       "count              70.000000      70.000000   70.0  \n",
+       "mean                3.644800       6.020600    2.0  \n",
+       "std                 1.181868       0.253934    0.0  \n",
+       "min                 1.472000       5.144000    2.0  \n",
+       "25%                 2.845500       5.877500    2.0  \n",
+       "50%                 3.609500       5.981500    2.0  \n",
+       "75%                 4.436000       6.187750    2.0  \n",
+       "max                 6.682000       6.550000    2.0  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seeds2.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area</th>\n",
+       "      <th>perimeter</th>\n",
+       "      <th>compactness</th>\n",
+       "      <th>length</th>\n",
+       "      <th>width</th>\n",
+       "      <th>asymmetry_coefficient</th>\n",
+       "      <th>groove_length</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>11.873857</td>\n",
+       "      <td>13.247857</td>\n",
+       "      <td>0.849409</td>\n",
+       "      <td>5.229514</td>\n",
+       "      <td>2.853771</td>\n",
+       "      <td>4.788400</td>\n",
+       "      <td>5.116400</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.723004</td>\n",
+       "      <td>0.340196</td>\n",
+       "      <td>0.021760</td>\n",
+       "      <td>0.138015</td>\n",
+       "      <td>0.147516</td>\n",
+       "      <td>1.336465</td>\n",
+       "      <td>0.162068</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>10.590000</td>\n",
+       "      <td>12.410000</td>\n",
+       "      <td>0.808100</td>\n",
+       "      <td>4.899000</td>\n",
+       "      <td>2.630000</td>\n",
+       "      <td>1.661000</td>\n",
+       "      <td>4.745000</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>11.262500</td>\n",
+       "      <td>13.002500</td>\n",
+       "      <td>0.834000</td>\n",
+       "      <td>5.136250</td>\n",
+       "      <td>2.725500</td>\n",
+       "      <td>4.048750</td>\n",
+       "      <td>5.002000</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>11.835000</td>\n",
+       "      <td>13.250000</td>\n",
+       "      <td>0.849350</td>\n",
+       "      <td>5.224000</td>\n",
+       "      <td>2.834500</td>\n",
+       "      <td>4.839000</td>\n",
+       "      <td>5.091500</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>12.425000</td>\n",
+       "      <td>13.470000</td>\n",
+       "      <td>0.861825</td>\n",
+       "      <td>5.323750</td>\n",
+       "      <td>2.967000</td>\n",
+       "      <td>5.467250</td>\n",
+       "      <td>5.228500</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>13.370000</td>\n",
+       "      <td>13.950000</td>\n",
+       "      <td>0.897700</td>\n",
+       "      <td>5.541000</td>\n",
+       "      <td>3.232000</td>\n",
+       "      <td>8.456000</td>\n",
+       "      <td>5.491000</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            area  perimeter  compactness     length      width  \\\n",
+       "count  70.000000  70.000000    70.000000  70.000000  70.000000   \n",
+       "mean   11.873857  13.247857     0.849409   5.229514   2.853771   \n",
+       "std     0.723004   0.340196     0.021760   0.138015   0.147516   \n",
+       "min    10.590000  12.410000     0.808100   4.899000   2.630000   \n",
+       "25%    11.262500  13.002500     0.834000   5.136250   2.725500   \n",
+       "50%    11.835000  13.250000     0.849350   5.224000   2.834500   \n",
+       "75%    12.425000  13.470000     0.861825   5.323750   2.967000   \n",
+       "max    13.370000  13.950000     0.897700   5.541000   3.232000   \n",
+       "\n",
+       "       asymmetry_coefficient  groove_length  class  \n",
+       "count              70.000000      70.000000   70.0  \n",
+       "mean                4.788400       5.116400    3.0  \n",
+       "std                 1.336465       0.162068    0.0  \n",
+       "min                 1.661000       4.745000    3.0  \n",
+       "25%                 4.048750       5.002000    3.0  \n",
+       "50%                 4.839000       5.091500    3.0  \n",
+       "75%                 5.467250       5.228500    3.0  \n",
+       "max                 8.456000       5.491000    3.0  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seeds3.describe()"
    ]
   },
   {
