--- a/Capstone-Project1/Code/Logistic_Regression_Model.ipynb
+++ b/Capstone-Project1/Code/Logistic_Regression_Model.ipynb
@@ -8,14 +8,14 @@
     "\n",
     "This notebook contains statistical analyses performed on the Seeds data which was cleaned and prepared in previous project notebooks. \n",
     "\n",
-    "Two methods will be explored here: bootstrapping, and Bayesian analysis with PYMC3. For each, after model initialization, hyperparamter tuning and cross validation are explored in pursuit of greater model performance as defined by model accuracy.\n",
+    "Two methods will be explored here: logistic regression and Bayesian analysis with pymc3. For each, after model initialization, hyperparamter tuning and cross validation are explored in pursuit of greater model performance as defined by model accuracy.\n",
     "\n",
-    "In addition to accuracy, which is not always the best measure of a model's perfromance, the precision, recall, F1 score, and support are all calculated."
+    "In addition to accuracy, which is not always the best measure of a model's performance, the precision, recall, F1 score, and support are all calculated."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -403,19 +403,30 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training score: 98.21 %   Test score: 95.24000000000001 %\n"
+      "Training score: 98.21 %   Test score: 95.24000000000001 %\n",
+      "\n",
+      "Accuracy: 96.0%\n"
      ]
     }
    ],
    "source": [
     "# Create the final classifier with C=37.5 and fit it to the test set. Check the score\n",
-    "clf = LogisticRegression(C=bestC, solver='lbfgs', max_iter=5000)\n",
+    "clf = LogisticRegression(C=37.5, solver='lbfgs', max_iter=5000)\n",
     "\n",
     "clf.fit(X_train, y_train)\n",
     "test_score = clf.score(X_test, y_test)\n",
     "train_score = clf.score(X_train, y_train)\n",
     "\n",
-    "print('\\nTraining score:',round(train_score, 4) * 100,'%   Test score:',round(test_score,4) * 100,'%')"
+    "print('\\nTraining score:',round(train_score, 4) * 100,'%   Test score:',round(test_score,4) * 100,'%')\n",
+    "\n",
+    "# Use cross validation with the optimized values\n",
+    "X_train.reset_index(drop=True, inplace=True)\n",
+    "y_train.reset_index(drop=True, inplace=True)\n",
+    "# Using 5-Fold Cross Validation in the function cv_score\n",
+    "\n",
+    "score = round(cv_score(clf, X_train.values, y_train.values),2)\n",
+    "\n",
+    "print('\\nAccuracy: ' + str(score * 100) + '%')"
    ]
   },
   {
@@ -691,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +716,7 @@
        "Name: class, dtype: bool"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -758,6 +769,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Accuracy: 92.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Perform cross validation\n",
+    "score = round(cv_score(gNB, X_train.values, y_train.values), 2)\n",
+    "\n",
+    "print('\\nAccuracy: ' + str(score * 100) + '%')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -766,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -777,25 +809,25 @@
       "Training Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         1.0       0.93      0.88      0.90        59\n",
-      "         2.0       0.96      0.95      0.95        56\n",
-      "         3.0       0.91      0.98      0.95        53\n",
+      "         1.0       0.91      0.86      0.89        59\n",
+      "         2.0       0.95      0.95      0.95        56\n",
+      "         3.0       0.91      0.96      0.94        53\n",
       "\n",
-      "    accuracy                           0.93       168\n",
-      "   macro avg       0.93      0.94      0.93       168\n",
-      "weighted avg       0.94      0.93      0.93       168\n",
+      "    accuracy                           0.92       168\n",
+      "   macro avg       0.92      0.92      0.92       168\n",
+      "weighted avg       0.92      0.92      0.92       168\n",
       "\n",
       "\n",
       "Test Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         1.0       0.73      0.73      0.73        11\n",
+      "         1.0       0.67      0.73      0.70        11\n",
       "         2.0       0.93      0.93      0.93        14\n",
-      "         3.0       0.88      0.88      0.88        17\n",
+      "         3.0       0.88      0.82      0.85        17\n",
       "\n",
-      "    accuracy                           0.86        42\n",
-      "   macro avg       0.85      0.85      0.85        42\n",
-      "weighted avg       0.86      0.86      0.86        42\n",
+      "    accuracy                           0.83        42\n",
+      "   macro avg       0.82      0.83      0.82        42\n",
+      "weighted avg       0.84      0.83      0.84        42\n",
       "\n"
      ]
     }
@@ -825,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1049,9 @@
       "\n",
       "With \"compactness\" removed-\n",
       "\n",
-      "Training score: 98.21 %   Test score: 95.24000000000001 %\n"
+      "Training score: 98.21 %   Test score: 95.24000000000001 %\n",
+      "\n",
+      "CV accuracy: 96.0%\n"
      ]
     }
    ],
@@ -1030,7 +1064,11 @@
     "train_score = clf4.score(X4_train, y4_train)\n",
     "\n",
     "print('\\nWith \"compactness\" removed-')\n",
-    "print('\\nTraining score:',round(train_score, 4) * 100,'%   Test score:',round(test_score,4) * 100,'%')"
+    "print('\\nTraining score:',round(train_score, 4) * 100,'%   Test score:',round(test_score,4) * 100,'%')\n",
+    "\n",
+    "score = round(cv_score(clf, X_train.values, y_train.values),2)\n",
+    "\n",
+    "print('\\nCV accuracy: ' + str(score * 100) + '%')"
    ]
   },
   {
