--- a/Capstone-Project1/Code/Unsupervised_Learning_Models.ipynb
+++ b/Capstone-Project1/Code/Unsupervised_Learning_Models.ipynb
@@ -450,13 +450,7 @@
       "168/168 [==============================] - 0s 226us/step - loss: 0.6256 - accuracy: 0.8095 - val_loss: 0.6213 - val_accuracy: 0.8333\n",
       "Epoch 55/1000\n",
       "168/168 [==============================] - 0s 274us/step - loss: 0.6167 - accuracy: 0.7798 - val_loss: 0.6044 - val_accuracy: 0.8333\n",
-      "Epoch 56/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 56/1000\n",
       "168/168 [==============================] - 0s 244us/step - loss: 0.6099 - accuracy: 0.7381 - val_loss: 0.6052 - val_accuracy: 0.7619\n",
       "Epoch 57/1000\n",
       "168/168 [==============================] - 0s 286us/step - loss: 0.6030 - accuracy: 0.7440 - val_loss: 0.5980 - val_accuracy: 0.7619\n",
@@ -684,13 +678,7 @@
       "168/168 [==============================] - 0s 184us/step - loss: 0.2240 - accuracy: 0.9226 - val_loss: 0.2950 - val_accuracy: 0.8810\n",
       "Epoch 166/1000\n",
       "168/168 [==============================] - 0s 190us/step - loss: 0.2184 - accuracy: 0.9286 - val_loss: 0.2844 - val_accuracy: 0.8810\n",
-      "Epoch 167/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 167/1000\n",
       "168/168 [==============================] - 0s 178us/step - loss: 0.2060 - accuracy: 0.9464 - val_loss: 0.3227 - val_accuracy: 0.8571\n",
       "Epoch 168/1000\n",
       "168/168 [==============================] - 0s 214us/step - loss: 0.2317 - accuracy: 0.9167 - val_loss: 0.3395 - val_accuracy: 0.8810\n",
@@ -1035,13 +1023,7 @@
       "168/168 [==============================] - 0s 196us/step - loss: 0.3936 - accuracy: 0.8512 - val_loss: 0.4104 - val_accuracy: 0.7857\n",
       "Epoch 137/1000\n",
       "168/168 [==============================] - 0s 226us/step - loss: 0.3891 - accuracy: 0.8452 - val_loss: 0.4241 - val_accuracy: 0.8095\n",
-      "Epoch 138/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 138/1000\n",
       "168/168 [==============================] - 0s 196us/step - loss: 0.3962 - accuracy: 0.8571 - val_loss: 0.4117 - val_accuracy: 0.8095\n",
       "Epoch 139/1000\n",
       "168/168 [==============================] - 0s 202us/step - loss: 0.3790 - accuracy: 0.8690 - val_loss: 0.4120 - val_accuracy: 0.8095\n",
@@ -1383,13 +1365,7 @@
       "168/168 [==============================] - 0s 113us/step - loss: 0.2039 - accuracy: 0.9226 - val_loss: 0.2515 - val_accuracy: 0.8810\n",
       "Epoch 302/1000\n",
       "168/168 [==============================] - 0s 113us/step - loss: 0.1945 - accuracy: 0.9345 - val_loss: 0.2861 - val_accuracy: 0.8571\n",
-      "Epoch 303/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 303/1000\n",
       "168/168 [==============================] - 0s 107us/step - loss: 0.2007 - accuracy: 0.9286 - val_loss: 0.2558 - val_accuracy: 0.8810\n",
       "Epoch 304/1000\n",
       "168/168 [==============================] - 0s 119us/step - loss: 0.1937 - accuracy: 0.9286 - val_loss: 0.2580 - val_accuracy: 0.8810\n",
@@ -1734,13 +1710,7 @@
       "168/168 [==============================] - 0s 226us/step - loss: 0.7866 - accuracy: 0.6190 - val_loss: 0.7338 - val_accuracy: 0.7381\n",
       "Epoch 142/1000\n",
       "168/168 [==============================] - 0s 268us/step - loss: 0.7969 - accuracy: 0.6071 - val_loss: 0.7402 - val_accuracy: 0.6905\n",
-      "Epoch 143/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 143/1000\n",
       "168/168 [==============================] - 0s 274us/step - loss: 0.7886 - accuracy: 0.6250 - val_loss: 0.7321 - val_accuracy: 0.7381\n",
       "Epoch 144/1000\n",
       "168/168 [==============================] - 0s 244us/step - loss: 0.7945 - accuracy: 0.6071 - val_loss: 0.7253 - val_accuracy: 0.7143\n",
@@ -1966,13 +1936,7 @@
       "168/168 [==============================] - 0s 143us/step - loss: 0.6911 - accuracy: 0.7143 - val_loss: 0.6927 - val_accuracy: 0.6667\n",
       "Epoch 252/1000\n",
       "168/168 [==============================] - 0s 161us/step - loss: 0.7043 - accuracy: 0.7381 - val_loss: 0.6501 - val_accuracy: 0.7857\n",
-      "Epoch 253/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 253/1000\n",
       "168/168 [==============================] - 0s 238us/step - loss: 0.6968 - accuracy: 0.7560 - val_loss: 0.6410 - val_accuracy: 0.8095\n",
       "Epoch 254/1000\n",
       "168/168 [==============================] - 0s 155us/step - loss: 0.6999 - accuracy: 0.7560 - val_loss: 0.6574 - val_accuracy: 0.8095\n",
@@ -2198,13 +2162,7 @@
       "168/168 [==============================] - 0s 161us/step - loss: 0.5687 - accuracy: 0.8571 - val_loss: 0.5222 - val_accuracy: 0.8810\n",
       "Epoch 362/1000\n",
       "168/168 [==============================] - 0s 161us/step - loss: 0.5682 - accuracy: 0.8631 - val_loss: 0.5519 - val_accuracy: 0.8810\n",
-      "Epoch 363/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 363/1000\n",
       "168/168 [==============================] - 0s 149us/step - loss: 0.5610 - accuracy: 0.8631 - val_loss: 0.5331 - val_accuracy: 0.9048\n",
       "Epoch 364/1000\n",
       "168/168 [==============================] - 0s 172us/step - loss: 0.5575 - accuracy: 0.8690 - val_loss: 0.5160 - val_accuracy: 0.8571\n",
@@ -2430,13 +2388,7 @@
       "168/168 [==============================] - 0s 119us/step - loss: 0.4046 - accuracy: 0.9167 - val_loss: 0.3905 - val_accuracy: 0.8810\n",
       "Epoch 472/1000\n",
       "168/168 [==============================] - 0s 107us/step - loss: 0.4020 - accuracy: 0.9048 - val_loss: 0.4046 - val_accuracy: 0.9286\n",
-      "Epoch 473/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 473/1000\n",
       "168/168 [==============================] - 0s 137us/step - loss: 0.4307 - accuracy: 0.8810 - val_loss: 0.4125 - val_accuracy: 0.9048\n",
       "Epoch 474/1000\n",
       "168/168 [==============================] - 0s 137us/step - loss: 0.4216 - accuracy: 0.8810 - val_loss: 0.3861 - val_accuracy: 0.9048\n",
@@ -2662,13 +2614,7 @@
       "168/168 [==============================] - 0s 125us/step - loss: 0.3047 - accuracy: 0.9226 - val_loss: 0.3136 - val_accuracy: 0.9048\n",
       "Epoch 582/1000\n",
       "168/168 [==============================] - 0s 113us/step - loss: 0.3037 - accuracy: 0.9167 - val_loss: 0.2962 - val_accuracy: 0.9048\n",
-      "Epoch 583/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 583/1000\n",
       "168/168 [==============================] - 0s 125us/step - loss: 0.3310 - accuracy: 0.9048 - val_loss: 0.3114 - val_accuracy: 0.9048\n",
       "Epoch 584/1000\n",
       "168/168 [==============================] - 0s 119us/step - loss: 0.3061 - accuracy: 0.9167 - val_loss: 0.3278 - val_accuracy: 0.9524\n",
@@ -2894,13 +2840,7 @@
       "168/168 [==============================] - 0s 119us/step - loss: 0.2328 - accuracy: 0.9286 - val_loss: 0.2577 - val_accuracy: 0.9286\n",
       "Epoch 692/1000\n",
       "168/168 [==============================] - 0s 107us/step - loss: 0.2442 - accuracy: 0.9345 - val_loss: 0.2778 - val_accuracy: 0.9524\n",
-      "Epoch 693/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 693/1000\n",
       "168/168 [==============================] - 0s 119us/step - loss: 0.2342 - accuracy: 0.9405 - val_loss: 0.2631 - val_accuracy: 0.9286\n",
       "Epoch 694/1000\n",
       "168/168 [==============================] - 0s 113us/step - loss: 0.2276 - accuracy: 0.9286 - val_loss: 0.2729 - val_accuracy: 0.9048\n",
@@ -3126,13 +3066,7 @@
       "168/168 [==============================] - 0s 113us/step - loss: 0.1910 - accuracy: 0.9345 - val_loss: 0.2566 - val_accuracy: 0.9286\n",
       "Epoch 802/1000\n",
       "168/168 [==============================] - 0s 77us/step - loss: 0.1838 - accuracy: 0.9524 - val_loss: 0.2210 - val_accuracy: 0.9286\n",
-      "Epoch 803/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 803/1000\n",
       "168/168 [==============================] - 0s 113us/step - loss: 0.1879 - accuracy: 0.9464 - val_loss: 0.2168 - val_accuracy: 0.9286\n",
       "Epoch 804/1000\n",
       "168/168 [==============================] - 0s 119us/step - loss: 0.1842 - accuracy: 0.9405 - val_loss: 0.2192 - val_accuracy: 0.9286\n",
@@ -3507,7 +3441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
